--- a/learn/learn122.html
+++ b/learn/learn122.html
@@ -13,7 +13,29 @@ color:red;
 <script src='jquery/jquery-3.6.0.min.js'></script>
 <script src='jquery-ui-1.12.1/jquery-ui.js'></script>
 <script>
-
+function setInvalidMessage(component)
+{
+if(component.id=='employeeId')
+{
+alert('customError : '+component.validity.customError);
+alert('patternMismatch : '+component.validity.patternMismatch);
+alert('rangeOverflow : '+component.validity.rangeOverflow);
+alert('rangeUnderflow : '+component.validity.rangeUnderflow);
+alert('stepMismatch : '+component.validity.stepMismatch);
+alert('typeMismatch : '+component.validity.typeMismatch);
+alert('valid : '+component.validity.valid);
+alert('valueMissing : '+component.validity.valueMissing);
+if(component.validity.valueMissing){
+component.setCustomValidity("Employee Id is required");
+}
+if(component.validity.rangeUnderflow){
+component.setCustomValidity("Employee Id should be>=1");
+}
+if(component.validity.rangeOverflow){
+component.setCustomValidity("Employee Id should be <=99999");
+}
+}
+}
 </script>
 </head>
 <body>
@@ -22,7 +44,7 @@ color:red;
 <!--submitting form data with get type request is not good idea-->
 <form method='get' action='addEmployee' >
 <label for='employeeId'>Employee Id</label>
-<input type='number' id='employeeId' name='employeeId' min='1' max='99999' step='1' required><br/>
+<input type='number' id='employeeId' name='employeeId' min='1' max='99999' step='1' required oninput='this.setCustomValidity("")' onchange='this.setCustomValidity("")' onvalid='this.setCustomValidity("")'    oninvalid='setInvalidMessage(this)'><br/>
 <label for='firstName'>First name</label>
 <input type='text' id='firstName' name='firstName' required><br/>
 <label for='lastName'>Last name</label>
